--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,7 +3,7 @@ name: github pages
 on:
   push:
     branches:
-      - hugo_source  # Set a branch that will trigger a deployment
+      - main  # Set a branch that will trigger a deployment
 
 jobs:
   deploy:
