--- a/hugo.toml
+++ b/hugo.toml
@@ -88,17 +88,17 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
 
     [params.flexsearch] # Parameters for FlexSearch
         enabled             = true
-        # tokenize            = "full"
-        # optimize            = true
-        # cache               = 100
-        # minQueryChar        = 3 # default is 0 (disabled)
-        # maxResult           = 5 # default is 5
-        # searchSectionsIndex = []
+        tokenize            = "full"
+        optimize            = true
+        cache               = 100
+        minQueryChar        = 3 # default is 0 (disabled)
+        maxResult           = 5 # default is 5
+        searchSectionsIndex = []
 
     [params.docsearch] # Parameters for DocSearch
-        appID     = "O2QIOCBDAK"                       # Algolia Application ID (or set env variable HUGO_PARAM_DOCSEARCH_appID)
-        apiKey    = "fdc60eee76a72a35d739b54521498b77" # Algolia Search-Only API (Public) Key (or set env variable HUGO_PARAM_DOCSEARCH_apiKey)
-        indexName = "dev_lotusdocs.dev"               # Index Name to perform search on (or set env variable HUGO_PARAM_DOCSEARCH_indexName)
+        # appID     = "O2QIOCBDAK"                       # Algolia Application ID (or set env variable HUGO_PARAM_DOCSEARCH_appID)
+        # apiKey    = "fdc60eee76a72a35d739b54521498b77" # Algolia Search-Only API (Public) Key (or set env variable HUGO_PARAM_DOCSEARCH_apiKey)
+        # indexName = "dev_lotusdocs.dev"               # Index Name to perform search on (or set env variable HUGO_PARAM_DOCSEARCH_indexName)
 
     [params.plausible] # Parameters for Plausible Analytics
         dataDomain = "lotusdocs.dev" # (or set via env variable HUGO_PARAMS_PLAUSIBLE_dataDomain)
