--- a/hugo.toml
+++ b/hugo.toml
@@ -75,7 +75,7 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
 
         # icons
         sidebarIcons    = true                                # enable sidebar icons? default false
-        titleIcon       = false                                # enable front matter icon title prefix? default is false
+        titleIcon       = false                                # enable front matter icon title prfefix? default is false
 
         # content navigation
         breadcrumbs     = true                                # default is true
@@ -87,6 +87,8 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
 
         # front matter
         descriptions    = true                                # enable front matter descriptions under content title?
+
+        intLinkTooltip   = true # Enable a tooltip for internal links that displays info about the destination? default false
 
     [params.flexsearch] # Parameters for FlexSearch
         enabled             = true
