--- a/hugo.toml
+++ b/hugo.toml
@@ -110,9 +110,9 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
         eventAPI   = "/docs/s/api/event/"       # optional - (or set via env variable HUGO_PARAMS_PLAUSIBLE_eventAPI)
 
     [params.feedback]
-        enabled = true
+        enabled = false
         emoticonTpl = true
-        eventDest = ["plausible","google"]
+        eventDest = ["plausible"]
         emoticonEventName = "Feedback"
         positiveEventName = "Positive Feedback"
         negativeEventName = "Negative Feedback"
