--- a/hugo.toml
+++ b/hugo.toml
@@ -105,9 +105,9 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
         # indexName = "dev_lotusdocs.dev"               # Index Name to perform search on (or set env variable HUGO_PARAM_DOCSEARCH_indexName)
 
     [params.plausible] # Parameters for Plausible Analytics
-        dataDomain = "rapidai.github./RapidOCRDocs" # (or set via env variable HUGO_PARAMS_PLAUSIBLE_dataDomain)
-        scriptURL  = "/stats/js/script.js"
-        eventAPI   = "/stats/api/event"    # optional
+        dataDomain = "rapidai.github.io/rapidocrdocs" # (or set via env variable HUGO_PARAMS_PLAUSIBLE_dataDomain)
+        scriptURL  = "https://plausible.yourdomain.com/js/script.js"    # optional
+        eventAPI   = "https://plausible.yourdomain.com/stats/api/event" # optional
 
     [params.feedback]
         enabled = false
