--- a/hugo.toml
+++ b/hugo.toml
@@ -106,8 +106,8 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
 
     [params.plausible] # Parameters for Plausible Analytics
         dataDomain = "rapidai.github.io/rapidocrdocs" # (or set via env variable HUGO_PARAMS_PLAUSIBLE_dataDomain)
-        scriptURL  = "https://plausible.rapidai.github.io/rapidocrdocs/js/script.js"    # optional
-        eventAPI   = "https://plausible.rapidai.github.io/rapidocrdocs/stats/api/event" # optional
+        scriptURL  = "/docs/s/js/script.outbound-links.js"       # (or set via env variable HUGO_PARAMS_PLAUSIBLE_scriptURL)
+        eventAPI   = "/docs/s/api/event/"       # optional - (or set via env variable HUGO_PARAMS_PLAUSIBLE_eventAPI)
 
     [params.feedback]
         enabled = false
