fix(blog): Remove duplicate contributor under the bottom of page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,7 +85,7 @@ plugins:
       repository: RapidAI/RapidOCRDocs
       branch: main
       token: !!python/object/apply:os.getenv ["MKDOCS_GIT_COMMITTERS_APIKEY"]
-  - git-authors
+  # - git-authors
   - git-revision-date-localized:
       enable_creation_date: true
 
