docs: Update rapidocr_web changelog

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,22 +146,22 @@ nav:
       - 使用说明: install_usage/rapidocr/usage.md
       - 参数解释: install_usage/rapidocr/config_yaml.md
       - 命令行工具: install_usage/rapidocr/cli.md
-    - rapidocr_paddle: install_usage/rapidocr_paddle.md
+    - rapidocr_paddle:
+      - 安装及使用: install_usage/rapidocr_paddle/usage.md
+      - 更新日志: install_usage/rapidocr_paddle/changelog.md
     - rapidocr_web:
-      - 安装及使用: install_usage/rapidocr_web/rapidocr_web.md
+      - 安装及使用: install_usage/rapidocr_web/usage.md
+      - 更新日志: install_usage/rapidocr_web/changelog.md
       - 桌面版使用教程: install_usage/rapidocr_web/desktop_usage.md
       - Nuitka打包: install_usage/rapidocr_web/nuitka_package.md
       - PyInstaller打包: install_usage/rapidocr_web/pyinstaller.md
       - 多语言版本部署: install_usage/rapidocr_web/ocrweb_multi.md
-    - rapidocr_api: install_usage/rapidocr_api.md
+    - rapidocr_api:
+      - 安装及使用: install_usage/rapidocr_api/usage.md
+      - 更新日志: install_usage/rapidocr_api/changelog.md
   - 博客:
     - blog/index.md
   - 交流群: communicate.md
   - 赞助: sponsor.md
   - 商业支持: business_support.md
-  - 更新日志:
-    - rapidocr_onnxruntime: changelog/rapidocr.md
-    - rapidocr_openvino: changelog/rapidocr_vino.md
-    - rapidocr_paddle: changelog/rapidocr_paddle.md
-    - rapidocr_web: changelog/rapidocr_web.md
-    - rapidocr_api: changelog/rapidocr_api.md
+
