--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,6 +139,7 @@ nav:
   - 快速开始: quickstart.md
   - 在线demo: online_demo.md
   - 效果展示: visualization.md
+  - 模型列表: model_list.md
   - 安装及使用:
     - API:
       - install_usage/api/RapidOCR.md
