--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,19 +60,19 @@ theme:
       default-tag: fontawesome/solid/tag
       hardware-tag: fontawesome/solid/microchip
       software-tag: fontawesome/solid/laptop-code
-    admonition:
-      note: octicons/tag-16
-      abstract: octicons/checklist-16
-      info: octicons/info-16
-      tip: octicons/squirrel-16
-      success: octicons/check-16
-      question: octicons/question-16
-      warning: octicons/alert-16
-      failure: octicons/x-circle-16
-      danger: octicons/zap-16
-      bug: octicons/bug-16
-      example: octicons/beaker-16
-      quote: octicons/quote-16
+    # admonition:
+    #   note: octicons/tag-16
+    #   abstract: octicons/checklist-16
+    #   info: octicons/info-16
+    #   tip: octicons/squirrel-16
+    #   success: octicons/check-16
+    #   question: octicons/question-16
+    #   warning: octicons/alert-16
+    #   failure: octicons/x-circle-16
+    #   danger: octicons/zap-16
+    #   bug: octicons/bug-16
+    #   example: octicons/beaker-16
+    #   quote: octicons/quote-16
 
 plugins:
   - tags
