--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ theme:
     - content.code.copy
     - content.tabs.link
     - content.footnote.tooltips
-    - navigation.expand  # 默认打开所有的字节
+    - navigation.expand  # 默认打开所有的子节
     - navigation.tabs # 顶级索引被作为tab
     - navigation.tabs.sticky # tab始终可见
     - navigation.top # 开启顶部导航栏
@@ -60,19 +60,6 @@ theme:
       default-tag: fontawesome/solid/tag
       hardware-tag: fontawesome/solid/microchip
       software-tag: fontawesome/solid/laptop-code
-    # admonition:
-    #   note: octicons/tag-16
-    #   abstract: octicons/checklist-16
-    #   info: octicons/info-16
-    #   tip: octicons/squirrel-16
-    #   success: octicons/check-16
-    #   question: octicons/question-16
-    #   warning: octicons/alert-16
-    #   failure: octicons/x-circle-16
-    #   danger: octicons/zap-16
-    #   bug: octicons/bug-16
-    #   example: octicons/beaker-16
-    #   quote: octicons/quote-16
 
 plugins:
   - tags
