--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,6 +147,7 @@ nav:
     - rapidocr_api:
       - 安装及使用: install_usage/rapidocr_api/usage.md
       - 更新日志: install_usage/rapidocr_api/changelog.md
+  - FAQ: faq/faq.md
   - 周边项目: related_projects.md
   - 博客:
     - blog/index.md
