chore: update files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,7 +63,6 @@ theme:
 
 plugins:
   - tags
-  - meta
   - blog:
       archive: false
       post_date_format: short
@@ -78,6 +77,8 @@ plugins:
       token: !!python/object/apply:os.getenv ["MKDOCS_GIT_COMMITTERS_APIKEY"]
   - git-revision-date-localized:
       enable_creation_date: true
+      timezone: Asia/Shanghai
+      type: iso_datetime
 
 
 markdown_extensions:
