docs: remove invalid content

--- a/.github/workflows/docs_build_develop.yml
+++ b/.github/workflows/docs_build_develop.yml
@@ -30,6 +30,7 @@ jobs:
       - run: pip install mike mkdocs-material jieba mkdocs-git-revision-date-localized-plugin mkdocs-git-committers-plugin-2 mkdocs-static-i18n
       - run: |
           git fetch origin gh-pages --depth=1
+          mkdocs build
+          ls -la site/
           mike set-default main
           mike deploy --push --update-aliases main latest
-          mike alias main --push
