--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,6 +115,7 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
+  - pymdownx.details
   - footnotes
   - def_list
   - md_in_html
@@ -130,7 +131,6 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
@@ -142,7 +142,6 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
   - admonition
-  - pymdownx.details
 
 nav:
   - 概览: index.md
@@ -168,7 +167,8 @@ nav:
     - rapidocr_api:
       - 安装及使用: install_usage/rapidocr_api/usage.md
       - 更新日志: install_usage/rapidocr_api/changelog.md
-  - 更新日志: changelog.md
+  - 更新日志:
+    - changelog
   - 常见问题: faq/faq.md
   - 周边项目: related_projects.md
   - 博客:
