--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,7 +168,7 @@ nav:
       - 安装及使用: install_usage/rapidocr_api/usage.md
       - 更新日志: install_usage/rapidocr_api/changelog.md
   - 更新日志:
-    - changelog
+    - v3.4.1: changelog/v3.4.1.md
   - 常见问题: faq/faq.md
   - 周边项目: related_projects.md
   - 博客:
