--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,6 +180,7 @@ nav:
   - 更新日志:
     - v3.4.2: changelog/v3.4.2.md
     - v3.4.1: changelog/v3.4.1.md
+    - v3.4.0: changelog/v3.4.0.md
   - 常见问题: faq/faq.md
   - 周边项目: related_projects.md
   - 博客:
