--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,6 +178,7 @@ nav:
       - 安装及使用: install_usage/rapidocr_api/usage.md
       - 更新日志: install_usage/rapidocr_api/changelog.md
   - 更新日志:
+    - v3.4.3: changelog/v3.4.3.md
     - v3.4.2: changelog/v3.4.2.md
     - v3.4.1: changelog/v3.4.1.md
     - v3.4.0: changelog/v3.4.0.md
