--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,25 +38,28 @@ theme:
     - toc.follow # 目录跟踪-页面右侧的小目录
 
   palette:
-    - media: "(prefers-color-scheme)"
+    - media: "(prefers-color-scheme)" # 系统主题
       toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
-
-    - media: "(prefers-color-scheme: light)"
+        icon: material/theme-light-dark
+        name: 系统主题
+    - media: "(prefers-color-scheme: light)" # 亮色主题
       scheme: default
+      primary: white
+      accent: light blue
       toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-
-    - media: "(prefers-color-scheme: dark)"
+        icon: material/weather-sunny
+        name: 明亮主题
+    - media: "(prefers-color-scheme: dark)" # 暗色主题
       scheme: slate
+      primary: black
+      accent: yellow
       toggle:
-        icon: material/brightness-4
-        name: Switch to system preference
+        icon: material/weather-night
+        name: 暗黑主题
 
+  favicon: favicon-lightning.svg
   icon:
-    logo: logo
+    logo: material/bolt
     previous: fontawesome/solid/angle-left
     next: fontawesome/solid/angle-right
     repo: fontawesome/brands/github
@@ -99,6 +102,10 @@ hooks:
   - hooks/expiry.py
   - hooks/change_copyright.py
   - hooks/link.py
+
+extra_css:
+  - stylesheets/extra.css
+  - https://static.zeoseven.com/zsft/292/main/result.css
 
 link_pages:
   - changelog/*.md
