chore: update files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,7 @@ hooks:
 
 extra_css:
   - stylesheets/extra.css
+  - stylesheets/font.css
   - https://static.zeoseven.com/zsft/292/main/result.css
 
 link_pages:
