--- a/.github/workflows/docs_build_develop.yml
+++ b/.github/workflows/docs_build_develop.yml
@@ -32,5 +32,5 @@ jobs:
           git fetch origin gh-pages --depth=1
           mkdocs build
           ls -la site/
-          mike set-default main
           mike deploy --push --update-aliases main latest
+          mike set-default --push latest
