docs: add require

--- a/.github/workflows/docs_build_develop.yml
+++ b/.github/workflows/docs_build_develop.yml
@@ -27,7 +27,7 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mike mkdocs-material jieba mkdocs-git-revision-date-localized-plugin mkdocs-git-committers-plugin-2 mkdocs-static-i18n
+      - run: pip install -r requirements.txt
       - run: |
           git fetch origin gh-pages --depth=1
           mkdocs build
