--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -191,10 +191,10 @@ nav:
     - v3.4.2: changelog/v3.4.2.md
     - v3.4.1: changelog/v3.4.1.md
     - v3.4.0: changelog/v3.4.0.md
-  - 贡献指南:
+  - 贡献指南: contributing.md
   - 常见问题: faq/faq.md
   - 周边项目: related_projects.md
-  - 博客: contributing.md
+  - 博客:
     - blog/index.md
   - 交流群: communicate.md
   - 赞助: sponsor.md
